# pain001-loader-xlsx

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_load_xlsx.py  02_iban_safety_guard.py  README.md
pain001_loader_xlsx/: __init__.py  loader.py
releases/: v0.0.53.md
tests/: test_examples.py  test_loader.py
