[project]
name = "pain001-loader-xlsx"
version = "0.0.53"
description = "Read flat-record payment data from Excel .xlsx files for pain001."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com" }]
keywords = ["iso20022", "pain001", "sepa", "xlsx", "excel", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pain001 >= 0.0.54, < 1",
    "openpyxl >= 3.1, < 4",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-cov >= 5",
    "ruff >= 0.6",
    "mypy >= 1.11",
    "interrogate >= 1.7",
]

[project.urls]
Homepage = "https://github.com/sebastienrousseau/pain001-loader-xlsx"
Documentation = "https://github.com/sebastienrousseau/pain001-loader-xlsx#readme"
Repository = "https://github.com/sebastienrousseau/pain001-loader-xlsx"
Issues = "https://github.com/sebastienrousseau/pain001-loader-xlsx/issues"
"Parent project" = "https://github.com/sebastienrousseau/pain001"

# The single line that wires this plugin into pain001 - pain001's
# registry discovers it via importlib.metadata.entry_points and
# dispatches `.xlsx` / `.xlsm` files to it automatically.
[project.entry-points."pain001.loaders"]
xlsx = "pain001_loader_xlsx.loader:XlsxLoader"

[build-system]
requires = ["hatchling >= 1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pain001_loader_xlsx"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "SIM"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pain001_loader_xlsx"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
show_missing = true

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
# openpyxl ships no type stubs (types-openpyxl is a separate, third-party
# package). The loader's openpyxl surface is narrow enough that wrapping
# every cell access in `cast` would add noise without catching real bugs;
# the runtime tests already cover the shape.
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pain001's plugin contract is structurally typed (PEP 544 Protocols);
# the package does not yet ship a py.typed marker so mypy can't see
# the public types. Ignore the missing-import warning while still
# treating the rest of the call graph strictly.
module = "pain001.*"
ignore_missing_imports = true
